--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,28 @@
-babel==2.9.0
-python-dateutil==2.6.0
-flask-moment==0.11.0
-flask-wtf==0.14.3
-flask_sqlalchemy==2.4.4
+alembic==1.8.1
+autopep8==1.7.0
+Babel==2.10.3
+click==8.1.3
+Flask==2.2.2
+Flask-Migrate==3.1.0
+Flask-Moment==1.0.4
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.1
+greenlet==1.1.2
+importlib-metadata==4.12.0
+importlib-resources==5.9.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.2.1
+MarkupSafe==2.1.1
+packaging==21.3
+psycopg2-binary==2.9.3
+pycodestyle==2.9.1
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.2.1
+six==1.16.0
+SQLAlchemy==1.4.40
+toml==0.10.2
+Werkzeug==2.2.2
+WTForms==3.0.1
+zipp==3.8.1
